--- a/lesson23_projects/house3n2/conf.toml
+++ b/lesson23_projects/house3n2/conf.toml
@@ -1,1 +1,11 @@
+# 定数
+const_file = "lesson18n2_projects/house3/data/const.json"
+
+# 状態遷移
 transition_file = "lesson20_projects/house3n2/auto_gen/data/transition3.json"
+
+# 状態ファイル出力ディレクトリー
+output_states_dir = "lesson23_projects/house3n2/auto_gen/code/states"
+
+[import_module]
+const = "lesson23_projects.house3n2.auto_gen.data.const"
