--- a/lesson23_projects/pen/conf.toml
+++ b/lesson23_projects/pen/conf.toml
@@ -1,1 +1,11 @@
+# 定数
+const_file = "lesson18n2_projects/pen/data/const.json"
+
+# 状態遷移
 transition_file = "lesson20_projects/pen/auto_gen/data/transition.json"
+
+# 状態ファイル出力ディレクトリー
+output_states_dir = "lesson23_projects/pen/auto_gen/code/states1"
+
+[import_module]
+const = "lesson18_projects.pen.auto_gen.data.const"
