--- a/lesson23_projects/wcsc/conf.toml
+++ b/lesson23_projects/wcsc/conf.toml
@@ -1,1 +1,11 @@
+# 定数
+const_file = "lesson18n2_projects/wcsc/data/const.json"
+
+# 状態遷移
 transition_file = "lesson20_projects/wcsc/auto_gen/data/transition.json"
+
+# 状態ファイル出力ディレクトリー
+output_states_dir = "lesson23_projects/wcsc/auto_gen/code/states1"
+
+[import_module]
+const = "lesson23_projects.wcsc.auto_gen.data.const"
