--- a/lesson17_projects/wcsc/conf.toml
+++ b/lesson17_projects/wcsc/conf.toml
@@ -6,3 +6,6 @@ output_const_file = "lesson17_projects/wcsc/auto_gen/data/const.py"
 # 状態遷移ファイル
 transition_file = "lesson14_projects/wcsc/data/transition.json"
 output_states_dir = "lesson17_projects/wcsc/auto_gen/code/states"
+
+[import_module]
+const = "lesson17_projects.wcsc.auto_gen.data.const"
