--- a/lesson18_projects/house3/conf.toml
+++ b/lesson18_projects/house3/conf.toml
@@ -1,1 +1,9 @@
-const_file = "lesson18_projects/house3/auto_gen/data/const.py"
+# 定数ファイル
+input_const_file = "lesson17_projects/house3/data/const.json"
+
+# 状態遷移ファイル
+transition_file = "lesson14_projects/house3/data/transition.json"
+output_states_dir = "lesson18_projects/house3/auto_gen/code/states"
+
+[import_module]
+const = "lesson17_projects.house3.auto_gen.data.const"
