--- a/lesson18_projects/pen/conf.toml
+++ b/lesson18_projects/pen/conf.toml
@@ -1,4 +1,9 @@
+# 定数ファイル
+input_const_file = "lesson17_projects/pen/data/const.json"
+
+# 状態遷移ファイル
 transition_file = "lesson14_projects/pen/data/transition.json"
-const_file = "lesson18_projects/pen/auto_gen/data/const.py"
 output_states_dir = "lesson18_projects/pen/auto_gen/code/states"
-import_const_module = "lesson18_projects.pen.auto_gen.data.const"
+
+[import_module]
+const = "lesson17_projects.pen.auto_gen.data.const"
