--- a/lesson23_projects/house3n2/conf.toml
+++ b/lesson23_projects/house3n2/conf.toml
@@ -9,3 +9,4 @@ output_states_dir = "lesson23_projects/house3n2/auto_gen/code/states1"
 
 [import_module]
 const = "lesson23_projects.house3n2.auto_gen.data.const"
+state_gen = "lesson23_projects.house3n2.data.state_gen_v23"
